# Weather-Data-System

./: README.md  pyproject.toml
src/: backup_db.py  db_utils.py  main.py
src/aws/: aws_lambda.py
